# etiquetacion_argumentacion_textos_infantiles

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
crudadmin_data/: admin.db
src/app/: main.py
src/app/api/v1/: __init__.py  login.py  posts.py  rate_limits.py  tasks.py  tiers.py  users.py  utils.py
src/app/api/v1/templates/: task_status.html
src/app/core/: config.py  schemas.py  security.py  setup.py
src/app/core/db/: database.py
src/app/core/utils/: cache.py
src/app/core/worker/: functions.py  settings.py
src/app/front/: __init__.py
src/app/front/routes/: public.py  user.py
src/app/front/templates/: base.html
src/app/front/templates/public/: page.html
src/app/front/templates/user/: labelling.html
src/app/resources/: input.css  main.md
src/app/static/: conectividad.js  input.css  output.css
